# argos

./: .gitignore  CHANGELOG.md  KNOWN_ISSUES.md  PLAN.md  PROGRESS.md  README.md  ROADMAP.md  argos.spec  main.py  pyproject.toml  requirements.txt  test_results_step26.txt  test_results_step26_fix.txt  test_results_step26_hist_fix.txt  test_results_step26_hist_fix2.txt  test_results_step26_timing_fix.txt  test_step29.py  test_step30.py
config/: constants.py  paths.py  settings.json  settings.py
core/: __init__.py  error_handler.py  exceptions.py  image_processor.py  image_store.py  interfaces.py  key_manager.py  logger.py  models.py  validators.py
core/align/: __init__.py  align_engine.py  blob_align.py  caliper_align.py  contour_align.py  feature_align.py  pattern_align.py
core/analyzers/: edge_analyzer.py  feature_analyzer.py  histogram_analyzer.py  noise_analyzer.py  shape_analyzer.py
core/evaluation/: __init__.py  evaluator.py  failure_analyzer.py  feasibility_analyzer.py
core/export/: __init__.py  image_exporter.py  json_exporter.py  pdf_exporter.py
core/inspection/: __init__.py  blob_inspector.py  candidate_generator.py  circular_caliper_inspector.py  linear_caliper_inspector.py  optimizer.py  pattern_inspector.py
core/providers/: __init__.py  base_provider.py  claude_provider.py  (+3 more)
result/: argos_results.json
scripts/: build.bat  build.sh  generate_assets.py
tests/: conftest.py  test_preflight_validation.py  test_step23_inspection_purpose.py  test_step42_feasibility_analyzer.py  test_step43_inspection_e2e.py
ui/: main_window.py  style.py  theme.py
(+89 files in other folders)
